# gitviz

./: .gitignore  README.md  ascii_test.txt  git_graph  git_graph.html  pyproject.toml  quick_test.py  run_tests.py  test_gitviz_manual.py
gitviz/: __init__.py  cli.py  core.py
gitviz.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
gitviz_test_output/: cli_limited.html  cli_test.html  test_output_ascii.txt
tests/: __init__.py  test_engines.py  test_integration.py
